--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = true
-envlist = py3{6,7,8,9}
+envlist = py3{6,7,8,9}, pypy3
 
 [testenv]
 commands = python -B -X faulthandler -X tracemalloc main.py
